--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,6 +146,7 @@ a:hover {
 #sidebar ul {
 	list-style-type:none;
 	margin-top:10px;
+
 	}
 #sidebar li {
 
@@ -153,7 +154,7 @@ a:hover {
 	padding-left:5px;
 	margin-top: 15px;
 	border-bottom:1px solid #6CC7DC;
-	
+	padding-bottom:10px;
 	}
 #sidebar li a {
 	display:block;
